# pybind_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen_stubs_golden.sh  gen_stubs_new.sh  gen_stubs_old.sh  setup.py
pydoc/: example.txt  submodule.txt  subpackage.txt
src/example/: module.cpp  module.h
src/example/subpackage/: module.cpp  submodule.cpp
src_cpp/example/subpackage/: module.h  submodule.cpp  submodule.h
src_python/example/: __init__.py
src_python/example/subpackage/: __init__.py  submodule.py
stubs_golden/example/subpackage/: submodule.pyi
stubs_new/: example.pyi
stubs_new/example/: subpackage.pyi
stubs_new/example/subpackage/: submodule.pyi
stubs_old/: example.pyi
stubs_old/example/: subpackage.pyi
stubs_old/example/subpackage/: submodule.pyi
